Add new card components

--- a/public/index.html
+++ b/public/index.html
@@ -13,9 +13,15 @@
       src="https://kit.fontawesome.com/118803ab34.js"
       crossorigin="anonymous"
     ></script>
+    <script src="/node_modules/jquery/dist/jquery.js"></script>
+    <script src="/node_modules/owl.carousel/dist/owl.carousel.min.js"></script>
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
 
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
+    <link
+      rel="stylesheet"
+      href="/node_modules/owl.carousel/dist/assets/owl.carousel.min.css"
+    />
 
     <title>Family Voyage</title>
   </head>
